# game

./: .gitignore  CMakeLists.txt  main.cpp
interface/: button.hpp
interface/button/: button.cpp
interface/input/: input.cpp  input.h  input.hpp
interface/rent_card/: RentCards.cpp  RentCards.h
interface/text/: text.cpp  text.h
interface/windows/: settings_window.cpp  settings_window.h
interface/windows/AuctionWindow/: AuctionWindow.cpp  AuctionWindow.h
interface/windows/BuyModeWindow/: buy_mode_window.cpp  buy_mode_window.h
interface/windows/CharactersWindow/: character_window.cpp  character_window.h
interface/windows/DrawCardWindow/: DrawCardWindow.cpp  DrawCardWindow.h
interface/windows/GameWindow/: game_window.cpp  game_window.h
interface/windows/MainWindow/: main_window.cpp  main_window.h
interface/windows/MortgageMode/: MortgageMode.cpp  MortgageMode.h
interface/windows/MyFieldsWindow/: MyFieldsWindow.cpp  MyFieldsWindow.h
interface/windows/PayWindow/: PayWindow.cpp  PayWindow.h
interface/windows/SettingsWindow/: settings_window.cpp  settings_window.h
interface/windows/SwapWindow/: SwapWindow.cpp  SwapWindow.h
qt/: mainwindow.cpp  mainwindow.h
sources/: cards.cpp  cards.h  field.cpp  field.h  game.cpp  game.h  player.cpp  player.h  settings.cpp  settings.h
